r2e-compile-tests/compile-fail/fga_wrong_subject_type.stderr
error[E0277]: the trait bound `Editor: DirectlyAssignable<(team::Ty, Member)>` is not satisfied
  --> compile-fail/fga_wrong_subject_type.rs:26:65
   |
26 |     assert_assignable::<(authz::team::Ty, authz::team::Member), authz::document::Editor>();
   |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DirectlyAssignable<(team::Ty, Member)>` is not implemented for `Editor`
      but trait `DirectlyAssignable<authz::user::Ty>` is implemented for it
  --> compile-fail/fga_wrong_subject_type.rs:7:1
   |
 7 | / r2e::r2e_openfga::model!(pub mod authz = inline r#"
 8 | | model
 9 | |   schema 1.1
...  |
20 | |     define editor: [user]
21 | | "#);
   | |__^
   = help: for that trait implementation, expected `authz::user::Ty`, found `(team::Ty, Member)`
note: required by a bound in `assert_assignable`
  --> compile-fail/fga_wrong_subject_type.rs:23:28
   |
23 | fn assert_assignable<S, R: DirectlyAssignable<S>>() {}
   |                            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_assignable`
   = note: this error originates in the macro `r2e::r2e_openfga::model` (in Nightly builds, run with -Z macro-backtrace for more info)
